# embeddings-from-a-website

./: .env.example  .gitignore  custom_crawl.py  main.py  pyproject.toml
